--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,9 @@
+body {
+  background: #f4f4f4;
+}
+
 h2 {
+  background: white;
   text-align: center;
   width: fit-content;
   margin: auto;
@@ -9,4 +14,9 @@ h2 {
   -ms-border-radius: 14px;
   -o-border-radius: 14px;
   border: 1px solid #ccc;
+}
+
+button {
+  display: block;
+  margin: auto;
 }
